命名空间修改

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "807098383@qq.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "autoload": {
+        "psr-4": {
+            "Bxy\\Helper\\": "src/"
+        }
+    },
 }
